2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): Don't create
	response_headers. This is done in soup_message_new. Use
	soup_message_get_header throughout.

	* src/libsoup/soup-queue.c (soup_check_used_headers): Write list
	of headers.
	(soup_parse_headers): Don't create response_headers. This is done
	in soup_message_new.
	(soup_debug_print_a_header): Handle multiple header vals.
	(soup_check_used_headers): Ditto.
	(soup_queue_remove_header): Ditto.
	(soup_queue_message): Don't destroy hashtable, just clear it.  
	Use soup_message_get_header throughout.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (soup_message_add_header): Handle
	multiple values in header hash tables.
	(free_header): Free the list of values.
	(soup_message_new): Create request_headers and response_headers
	here instead of on header insertion.
	(soup_message_set_request_header): Deprecate.
	(soup_message_get_request_header): Deprecate.
	(soup_message_set_response_header): Deprecate.
	(soup_message_get_response_header): Deprecate.

	* src/libsoup/soup-dav-server.c: Update to use new header get/add
	funcs.

	* src/libsoup/soup-headers.c (soup_headers_parse): Store headers
	as a GSList of values.

2001-10-03  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-uri.c (soup_uri_new): The @ in
	http://foo/bar@baz is part of the path, not the username/hostname
	split.

2001-10-01  Alex Graveley  <alex@ximian.com>

	* configure.in: Fix HAVE_OPENSSL and HAVE_NSS checks as these were
	always being defined.

2001-10-01  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new): Add defines
	for SOUP_PTRACE_ATTACH and SOUP_PTRACE_DETACH to remove
	architecture incompatibilities for ptrace() arguments.

	* configure.in: Add libdl to OpenSSL LDFLAGS.  Fix NSS header
	paths.  Define HAVE_OPENSSL and HAVE_NSS if the libraries are
	found successfully.
